<resources>
    <string name="app_name">Apni Dukaan</string>
    <string name="manage_stock_grow_business">Manage Stock. Grow Business.</string>
    <string name="powered_by_ujjaval_saini">Powered by: Ujjaval Saini</string>
    <string name="apni_dukaan">Apni Dukaan</string>
    <string name="stock">Stock</string>
    <string name="favorite">Favorite</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_stock">Add Stock</string>
    <string name="transactions">Transactions</string>
    <string name="akshay_saini">Akshay Saini</string>
    <string name="owner_email">sainisgr01@gmail.com</string>
    <string name="account">Account</string>
    <string name="backup_amp_restore"><![CDATA[Backup & Restore]]></string>
    <string name="notifications">Notifications</string>
    <string name="todo">TODO</string>
    <string name="security">Security</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="version_1_0_0">Version: 1.0.0</string>
    <string name="change_language">Change language</string>
    <string name="welcome_shiv_shakti">Welcome, Shiv Shakti 👋</string>
    <string name="today_29_aug_2025">Tuesday, 02 Sep 2025 | 04:40:23 PM</string>
    <string name="time_11_55_pm">Time: 11:55 PM</string>
    <string name="app_logo">App Logo</string>
    <string name="total_stock">📦 Total Stock</string>
    <string name="_120">120</string>
    <string name="sold_today">🛒 Sold Today</string>
    <string name="_25">25</string>
    <string name="profit">💰 Profit</string>
    <string name="_1500">₹1500</string>
    <string name="low_stock">⚠️ Low Stock</string>
    <string name="_3_items">3 Items</string>
    <string name="demo_1">Demo 1</string>
    <string name="_100">100</string>
    <string name="demo_2">Demo 2</string>
    <string name="saini">Saini</string>
    <string name="sell">📉 Sell</string>
    <string name="report">📊 Report</string>
    <string name="search">🔍 Search</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="profit_vs_loss_graph_coming_soon">📊 Profit vs Loss Graph (Coming Soon)</string>
    <string name="change_theme">Change Theme</string>
</resources>