<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home"/>
    <item
        android:id="@+id/stock"
        android:title="@string/stock"
        android:icon="@drawable/baseline_products"/>

    <item
        android:id="@+id/bottom_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/baseline_star"/>

    <item
        android:id="@+id/bottom_transaction"
        android:title="@string/transactions"
        android:icon="@drawable/baseline_money"/>

    <item
        android:id="@+id/bottom_setting"
        android:title="@string/setting"
        android:icon="@drawable/baseline_settings"/>


</menu>