<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:background="@color/white2"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <!-- Left Side Texts -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_shiv_shakti"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="#212121"
                    android:paddingBottom="4dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDateTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_29_aug_2025"
                        android:layout_marginEnd="20dp"
                        android:textSize="14sp"
                        android:textColor="#757575"/>

                </LinearLayout>
            </LinearLayout>

            <!-- Right Side Circular Logo with Elevation -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="60dp"
                android:layout_height="58dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/apni_dukaan_icon"
                    android:contentDescription="@string/app_logo"/>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        <!-- Stock Overview Cards -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2"
            android:background="@drawable/bg_rounded"
            android:layout_marginBottom="20dp">

            <!-- Total Stock -->
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_margin="6dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                 >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_stock"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvTotalStock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_120"
                        android:textColor="#2196F3"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Items Sold -->
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_margin="6dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                 >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sold_today"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvSoldToday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_25"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="#4CAF50"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Profit -->
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_margin="6dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                 >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profit"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvProfit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1500"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="#FF9800"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Low Stock -->
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_margin="6dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                 >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/low_stock"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvLowStock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_items"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="#F44336"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_margin="6dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                 >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_1"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/demo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_100"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="#4CAF50"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_margin="6dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                 >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_2"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/demo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saini"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="#FF9800"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
             
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btnSell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/sell"/>

            <Button
                android:id="@+id/btnReport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/report"/>

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/search"/>
        </LinearLayout>


        <!-- Recent Transactions -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recent_transactions"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTransactions"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:scrollbars="vertical"
            android:background="@drawable/bg_rounded"
            android:padding="4dp"/>

        <!-- Graph Placeholder -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profit_vs_loss_graph_coming_soon"
            android:textColor="#9E9E9E"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="italic"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/profitLossChart"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="16dp"/>

    </LinearLayout>

</ScrollView>
