<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="12dp"
    android:background="@color/white"
    tools:context=".fragments.subFragments.HelpSupportFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:spacing="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/todo"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/baseline_arrow_back_ios_new_24"
                    app:tint="@color/black" />

                <Space
                    android:layout_width="70dp"
                    android:layout_height="40dp"/>

                <!-- Title -->
                <TextView
                    android:id="@+id/tvHelpTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_support"
                    android:textSize="22sp"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:padding="12dp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <!-- FAQ Section -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/green">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/baseline_star"
                        app:tint="@color/green" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="FAQs - Common Questions"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="12dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Contact Support -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/baseline_money"
                        app:tint="@color/green" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Contact Support"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="12dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Feedback -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/baseline_help_24"
                        app:tint="@color/green" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Send Feedback"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="12dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Privacy Policy -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="6dp"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp"
                    android:padding="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/baseline_security_24"
                        app:tint="@color/green" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Privacy Policy"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="12dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- App Info -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/app_development"
                        app:tint="@color/green" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="App &amp; Developer Info"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="12dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version_1_0_0"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="12dp"/>

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>
